--- a/01-inception/index.css
+++ b/01-inception/index.css
@@ -1,3 +1,46 @@
-#heading {
-  color: coral;
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+
+.logo {
+  width: 200px;
+}
+
+.nav-items > ul {
+  font-size: 24px;
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-items > ul li {
+  padding: 10px;
+  margin: 10px;
+}
+
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.res-card {
+  margin: 5px;
+  width: 200px;
+  /* height: 300px; */
+  padding: 5px;
+  cursor: pointer;
+}
+
+.res-card:hover {
+  border: 1px solid black;
+  
+}
+
+.search {
+  padding: 10px;
+}
+
+.res-logo {
+  padding: 5px;
+  width: 190px;
 }
