--- a/01-inception/index.css
+++ b/01-inception/index.css
@@ -1,3 +1,7 @@
+body{
+  font-family:  montserrat, 'open sans';
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -5,13 +9,14 @@
 }
 
 .logo {
-  width: 200px;
+  width: 120px;
 }
 
 .nav-items > ul {
   font-size: 24px;
   display: flex;
   list-style-type: none;
+  align-items: center;
 }
 
 .nav-items > ul li {
@@ -49,4 +54,25 @@
   margin: 10px;
   cursor: pointer;
   padding: 5px;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.shimmer-card {
+  width: 200px;
+  height: 300px;
+  margin: 20px;
+  background-color: #f0f0f0;
+}
+
+.login {
+  /* padding: 5px 15px; */
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+.filter {
+  display: flex;
 }
